# cc_optimizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
config/: hbar_only.json
docs/: BACKTEST_INSTRUCTIONS.md  README.md  option_pricer_guide.md  project_plan.md
docs/phase_01/: progress.md
examples/: backtesting_example.py  cache_invalidation_demo.py
notebooks/: option_pricer_example.ipynb
scripts/: backtest.py  backtest_covered_call.py  compare_old_vs_new.py  multi_period_covered_call.py  multi_period_sanity_check.py  parameter_optimization.py  parameter_optimization_multi_period.py  plot_incremental_value.py  run_hbar_backtest.py  sanity_check_backtest.py
src/cc_optimizer/: __init__.py
src/cc_optimizer/options/: __init__.py  black_scholes.py  greeks.py  iv_helpers.py  validators.py
tests/: test_black_scholes.py  test_greeks.py  test_iv_integration.py
